--- a/ST_PP.ipynb
+++ b/ST_PP.ipynb
@@ -127,13 +127,13 @@
     }
    ],
    "source": [
-    "# Download historical AAPL stock prices\n",
+    "# Downloaded historical AAPL stock prices\n",
     "df = yf.download(\"AAPL\", start=\"2015-01-01\", end=\"2025-06-30\", auto_adjust=True)\n",
     "\n",
-    "# We only use the closing price\n",
+    "\n",
     "prices = df[[\"Close\"]]\n",
     "\n",
-    "# Scale the data to range [0, 1]\n",
+    "# Scaled the data to range [0, 1]\n",
     "scaler = MinMaxScaler()\n",
     "scaled = scaler.fit_transform(prices)\n"
    ]
@@ -164,7 +164,7 @@
     "LOOK_BACK = 20  # You can try 30 or 50 later\n",
     "X, y = make_sequences(scaled, LOOK_BACK)\n",
     "\n",
-    "# Check the shapes\n",
+    "# Checked the shapes\n",
     "print(\"X shape:\", X.shape)  # should be (samples, 20, 1)\n",
     "print(\"y shape:\", y.shape)\n"
    ]
